# wildlife-datasets

./: .gitignore  404.html  LICENSE  README.md  analysis.py  dataset_descriptions.ipynb  datasets.md  datasets.py  docs.sh  download.py  examples.ipynb  index.html  jupyter.sh  jupyter_gpu.sh  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  splits.py  test.py
.github/workflows/: ci.yml  docs.yml  ruff.yml  tests.yml
adding/: index.html
baselines/: extract_features.py  prepare_wildlife_reid_10k.ipynb  prepare_wildlife_reid_10k.py  prepare_wildlife_reid_10k_1.ipynb  prepare_wildlife_reid_10k_2.ipynb  utils.py
baselines/AnimalCLEF2025/: analyze.ipynb  prepare.ipynb  submissions.ipynb
baselines/AnimalCLEF2026/: analysis.ipynb  prepare.ipynb  submissions.ipynb
baselines/TurtlesTurtles/: prepare.ipynb
baselines/WildlifeReID-10k/: analyze_wildlife_reid_10k.ipynb  extract_features.py  prepare_wildlife_reid_10k.ipynb  prepare_wildlife_reid_10k_1.ipynb  prepare_wildlife_reid_10k_2.ipynb  split_comparison.ipynb  thresholds.py  train_model.py  utils.py
csv/: IPanda50.csv  MacaqueFaces.csv
dataframe/: index.html
datasets/: index.html
default_splits/: index.html
docs/: .adding.md  .default_splits.md  .methods.md  .recommended.md  .tutorial_datasets.md  .tutorial_splits.md  adding.md  analysis.md  convert_md.py  dataframe.md  datasets.md  default_splits.md  downloads.md  how-to-guides.md  index.md  installation.md  methods.md  preprocessing.md  recommended.md  reference.md  reference_analysis.md  reference_datasets.md  reference_evaluation.md  reference_splits.md  reference_utils.md  requirements.txt  training.md  tutorial_datasets.md  tutorial_evaluation.md  tutorial_splits.md  tutorials.md  utils.md  wildlife_dataset.md
docs/csv/: IPanda50.csv  MacaqueFaces.csv  mysummary.csv
download_scripts/: aau_zebrafish_id.py  aerial_cattle_2017.py  atrw.py  beluga_id.py  bird_individual_id.py  bristol_gorillas_2020.py  c_tai.py  c_zoo.py  chimpanzee_faces.py  cows_2021.py  drosophila.py  drosophilia.py  friesian_cattle_2015.py  friesian_cattle_2017.py  giraffe_zebra_id.py  giraffes.py  happy_whale.py  humpback_whale.py  hyena_id_2022.py  ipanda_50.py  leopard_id_2022.py  lion_data.py  macaque_faces.py  ndd20.py  noa_right_whale.py  noaa_right_whale.py  nyala_data.py  open_cows_2020.py  pandas.py  seal_id.py  smalst.py  stripe_spotter.py  test.py  whale_shark_id.py  wni_giraffes.py  zindi_turtle_recall.py
download_scripts/utils/: __init__.py  utils.py
experiments/: train.py  utils.py
experiments/basic/: train_batch.py
experiments/basic1/: results_summary.ipynb  train.sh
experiments/basic2/: results_composite.ipynb  results_summary.ipynb  train_batch.py
experiments/basic3/: results_composite.ipynb  results_summary.ipynb  train.sh  train_batch.py
experiments/final/: baseline.py
experiments/metric_learning/: results_summary.ipynb  train.sh  train_batch.py
installation/: index.html
methods/: index.html
notebooks/: analysis.ipynb  detection_mislabelled.ipynb  discrepancies.ipynb  example.ipynb  features_analyze.ipynb  features_extract.ipynb  intro.ipynb  introduction.ipynb  plot_grid.py  qwe.ipynb  retrieval.ipynb  size_analysis.ipynb  split_test.ipynb  test_evaluation.ipynb  training_experiments.ipynb
preprocessing/: index.html
recommended/: index.html
reference_analysis/: index.html
reference_datasets/: index.html
reference_splits/: index.html
scripts/BrownBearHeads/: README.md  fix_head_keypoint_paths.py  metadata_cleanup.py  predict_keypoints.py  prepare_metadata.py  resize_and_restructure.py
site/: 404.html  index.html  objects.inv  sitemap.xml
site/adding/: index.html
site/dataframe/: index.html
site/datasets/: index.html
site/installation/: index.html
site/reference_datasets/: index.html
site/reference_evaluation/: index.html
site/reference_splits/: index.html
site/reference_utils/: index.html
site/tutorial_datasets/: index.html
site/tutorial_evaluation/: index.html
site/tutorial_splits/: index.html
training/: index.html
tutorial_datasets/: index.html
tutorial_splits/: index.html
wildlife_dataset/: index.html
wildlife_datasets/: __init__.py  test.ipynb
wildlife_datasets/analysis/: __init__.py  plots.py  statistics.py
wildlife_datasets/splits/: lcg.py  (+6 more)
wildlife_training/: data.py  dataset_tools.py  inference.py  models.py  train.py  trainers.py  utils.py
(+196 files in other folders)
