[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wildlife-datasets"
version = "1.0.8"
authors = [
  { name="Lukáš Adam", email="lukas.adam.cr@gmail.com" },
  { name="Vojtěch Čermák", email="cermak.vojtech@seznam.cz" },
]
maintainers = [
  { name="Lukáš Adam", email="lukas.adam.cr@gmail.com" },
  { name="Vojtěch Čermák", email="cermak.vojtech@seznam.cz" },
]
description = "Library for easier access and research of wildlife re-identification datasets"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = [
    "wildlife",
    "re-identification",
    "datasets",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies=[
          'numpy>=1.19.4',
          'pandas>=1.1.4',
          'tqdm>=4.62.3',
          'opencv-python>=4.5.5.62',
          'Pillow>=7.1.2',
          'scikit-learn>=1.0.1',
          'matplotlib>=3.5.1',
          'pycocotools>=2.0.1',
          'datasets',
          'gdown',
          'kaggle',
          'pyinaturalist',
]

[project.urls]
"Homepage" = "https://github.com/WildlifeDatasets/wildlife-datasets"
"Documentation" = "https://wildlifedatasets.github.io/wildlife-datasets/"
"Bug Tracker" = "https://github.com/WildlifeDatasets/wildlife-datasets/issues"

[tool.setuptools]
packages = [
  "wildlife_datasets",
  "wildlife_datasets.analysis",
  "wildlife_datasets.datasets",
  "wildlife_datasets.loader",
  "wildlife_datasets.metrics",
  "wildlife_datasets.preparation",  
  "wildlife_datasets.splits",  
]
